test/deca/context/valid/decl_field.deca
class A {
    int i = 0;
}

class B extends A {
    A a;
}