test/deca/context/invalid/decl_field_unkown_class.deca
class A {
    int i = 0;
}

class B extends A {
    C c;
}